# muus_watcher_bot

./: .gitignore  README.md  bot_commands.txt  environment.yml  main.py
muus_watcher_rs/: Cargo.toml
muus_watcher_rs/src/: main.rs  muus.rs
parse/: Cargo.toml
parse/src/: main.rs
python/: dev.ipynb
rust/: Cargo.toml
rust/src/: main.rs
