[package]
name = "muus_watcher_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nanodb = "0.4.5"
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
frankenstein = { version = "0.31.0", default-features = false, features = ["async-http-client"] }
serde = { version = "1.0.203", features = ["derive"] }
regex = "1.10.5"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = "0.12.5"
select = "0.6.0"