[package]
name = "muus_watcher_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
frankenstein = "0.31.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
select = "0.6.0"
url = "2.5.2"
